Add FS native store support, SPI constructors, ITs and spotless fixes
Signed-off-by: nishchay21 <nishcha@amazon.com>