@@ -12,11 +12,26 @@ opensearchplugin {
   extendedPlugins = ['repository-gcs']
 }
 
+apply plugin: 'opensearch.internal-cluster-test'
+
 java { sourceCompatibility = JavaVersion.toVersion(25); targetCompatibility = JavaVersion.toVersion(25) }
 
 dependencies {
   implementation project(':sandbox:libs:dataformat-native')
   compileOnly project(':plugins:repository-gcs')
+  internalClusterTestImplementation project(':test:framework')
+  internalClusterTestImplementation project(':plugins:repository-gcs')
 }
 
 testingConventions.enabled = false
+
+tasks.named('compileInternalClusterTestJava').configure {
+  sourceCompatibility = JavaVersion.toVersion(25)
+  targetCompatibility = JavaVersion.toVersion(25)
+}
+
+tasks.named('internalClusterTest').configure {
+  jvmArgs += ['--enable-native-access=ALL-UNNAMED']
+  systemProperty 'native.lib.path', project(':sandbox:libs:dataformat-native').ext.nativeLibPath.absolutePath
+  dependsOn ':sandbox:libs:dataformat-native:buildRustLibrary'
+}
